Fixed buttons on mobile

--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,8 @@ body {
 
 button {
     background-color: burlywood;
+    border-color: black;
+    color: black;
     font-size: 1.25em;
     transition-duration: 100ms;
 }
